--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -47,41 +47,54 @@
       <nav class="nav  nav--closed">
         <ul class="nav__list">
           <li>
-            <a href="#">About</a>
-            <ul class="nav__sub">
-              <li><a href="#">Licenses and Regulations</a></li>
-              <li><a>Security of Funds</a></li>
-              <li><a href="stp-broker.html">STP Broker</a></li>
-              <li><a href="#">Legal Documents</a></li>
-              <li><a href="kids.html">KIDs</a></li>
-              <li><a href="careers.html">Careers</a></li>
-            </ul>
+            <a class="nav__link" onclick="about()">About</a>
+            <div class="nav__wrapper  nav__wrapper--closed">
+              <ul class="nav__sub">
+                <li><b>About</b></li>
+                <li><a href="#">Licenses and Regulations</a></li>
+                <li><a>Security of Funds</a></li>
+                <li><a href="about-us/stp-broker.html">STP Broker</a></li>
+                <li><a href="#">Legal Documents</a></li>
+                <li><a href="kids.html">KIDs</a></li>
+                <li><a href="careers.html">Careers</a></li>
+              </ul>
+            </div>
           </li>
           <li>
-            <a href="#">Trading</a>
-            <ul class="nav__sub">
-              <li><a href="../trading/account-types.html">Account Types</a></li>
-              <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-              <li><a href="../trading/product-specification.html">Product Specification</a></li>
-              <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
-              <li><a href="#">Platforms</a></li>
-              <li><a href="#">Funding and Withdrawal</a></li>
-              <li><a href="../trading/announcements.html">Announcements</a></li>
-            </ul>
+            <a class="nav__link" onclick="trading()">Trading</a>
+            <div class="nav__wrapper  nav__wrapper--closed">
+              <ul class="nav__sub">
+                <li><b>Trading</b></li>
+                <li><a href="../trading/account-types.html">Account Types</a></li>
+                <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+                <li><a href="../trading/product-specification.html">Product Specification</a></li>
+                <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
+                <li><a href="#">Platforms</a></li>
+                <li><a href="#">Funding and Withdrawal</a></li>
+                <li><a href="../trading/announcements.html">Announcements</a></li>
+              </ul>
+            </div>
           </li>
           <li>
-            <a href="#">Resources</a>
-            <ul class="nav__sub">
-              <li><a href="#">Glossary</a></li>
-              <li><a href="#">Tools</a></li>
-            </ul>
+            <a onclick="resources()">Resources</a>
+            <div class="nav__wrapper  nav__wrapper--closed">
+              <ul class="nav__sub">
+                <li><b>Resources</b></li>
+                <li><a href="#">Glossary</a></li>
+                <li><a href="#">Tools</a></li>
+              </ul>
+            </div>
           </li>
           <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
           <li>
-            <a href="../contact-us/contact-us.html">Contact Us</a>
-            <ul class="nav__sub">
-              <li><a href="#">FAQ</a></li>
-            </ul>
+            <a onclick="contact()">Contact Us</a>
+            <div class="nav__wrapper  nav__wrapper--closed">
+              <ul class="nav__sub">
+                <li><b>Contact Us</b></li>
+                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
         <label class="nav__search">
