--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Security of Funds - Forex24 Global</title>
+  <title>Glossary - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -52,11 +52,11 @@
               <ul class="nav__sub">
                 <li><b>About</b></li>
                 <li><a href="#">Licenses and Regulations</a></li>
-                <li><a>Security of Funds</a></li>
-                <li><a href="stp-broker.html">STP Broker</a></li>
+                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
+                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
-                <li><a href="kids.html">KIDs</a></li>
-                <li><a href="careers.html">Careers</a></li>
+                <li><a href="../about-us/kids.html">KIDs</a></li>
+                <li><a href="../about-us/careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -80,7 +80,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
-                <li><a href="../resources/glossary.html">Glossary</a></li>
+                <li><a>Glossary</a></li>
                 <li><a href="#">Tools</a></li>
               </ul>
             </div>
@@ -103,21 +103,66 @@
       </nav>
     </div>
   </header>
-  <section class="security">
+  <section class="glossary">
     <div class="container">
-      <h1 class="security__name">Security of Funds</h1>
-      <div class="security__img"></div>
-      <div class="security__text">
-        <b>Regulation</b>
-        <p>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/">300/16</a>. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
-        <b>Segregation of Funds</b>
-        <p>As a regulatory requirement, client funds are kept in separate clients’ accounts in top tier EU banks, to be used only for client trading and are totally separate from the company’s own funds. The company only works with regulated payment service providers.</p>
-        <b>Negative Balance Protection</b>
-        <p>Forex24 Global offers Negative Balance Protection to all of its clients, which is a guarantee a client cannot lose more money than they invested with the company.</p>
-        <b>Investor Compensation Fund</b>
-        <p>Forex24 Global is a member of the Investor Compensation Fund, which provides covered clients the extra security of receiving compensation from the fund for any claims against the company not fulfilling its obligations. For further details please <a href="../img/pdf/Investor-Compensation-Fund.pdf" target="_blank">see our ICF document</a>.</p>
-        <b>Funding and Website Security</b>
-        <p>We use level 1 PCI DSS compliant payment providers that use the highest level of online security when funding your account. We also adopt the SSL (Secure Sockets Layer) network security protocol that keeps your personal online communication and data with us private and secure.</p>
+      <h1 class="glossary__name">Glossary</h1>
+      <ul class="glossary__button">
+        <li><button>A</button></li>
+        <li><button>B</button></li>
+        <li><button>C</button></li>
+        <li><button>D</button></li>
+        <li><button>E</button></li>
+        <li><button>F</button></li>
+        <li><button>G</button></li>
+        <li><button>H</button></li>
+        <li><button>I</button></li>
+        <li><button>J</button></li>
+        <li><button>K</button></li>
+        <li><button>L</button></li>
+        <li><button>M</button></li>
+        <li><button>N</button></li>
+        <li><button>O</button></li>
+        <li><button>P</button></li>
+        <li><button>Q</button></li>
+        <li><button>R</button></li>
+        <li><button>S</button></li>
+        <li><button>T</button></li>
+        <li><button>U</button></li>
+        <li><button>V</button></li>
+        <li><button>W</button></li>
+        <li><button>X</button></li>
+        <li><button>Y</button></li>
+        <li><button>Z</button></li>
+      </ul>
+      <div class="glossary__content">
+        <details open>
+          <summary>AAA</summary>
+          <p>AAA is the top rating given for bonds, denoting the highest quality. This rating is awarded by the major rating agencies.</p>
+        </details>
+        <details>
+          <summary>ABS</summary>
+          <p>ABS (Asset-Backed Securities) are collateralized by assets such as car loans and credit card receivables, which can be seized if the debtor defaults. ABS are created by the process of securitization whereby banks pool types of loans and use them as collateral or security against a bond issue.</p>
+        </details>
+        <details>
+          <summary>Accrued Interest</summary>
+          <p>Accrued interest is the interest accruing on a security since the previous coupon date. If a security is sold between two payment dates, the buyer usually compensates the seller for the interest accrued, either within the price or as a separate payment.</p>
+        </details>
+        <details>
+          <summary>Amortization</summary>
+          <p>The reduction of principal or debt at regular intervals. This can be done via a purchase or sinking fund. The term can also be used to describe the depreciation of fixed assets.</p>
+        </details>
+        <details>
+          <summary>Annualized Rate</summary>
+          <p>An annualized rate plots the change in an indicator over the whole year if the latest monthly or quarterly figure is presumed to persist for the rest of the year. It is calculated by multiplying one month’s change by 12 to produce the annualized rate, or one quarter’s rate by four.</p>
+        </details>
+        <details>
+          <summary>Arbitrage</summary>
+          <p>Arbitrage is the process of buying and selling an identical (or very similar) financial instrument at the same time on different markets. True arbitrage requires that the financial instrument is trading at two different prices, and that the buying and selling trades can be completed at the same time.</p>
+        </details>
+        <details>
+          <summary>At-the-Money</summary>
+          <p>An option is described as being at-the-money when the exercise price is approximately the same as that of the underlying instrument.</p>
+        </details>
       </div>
     </div>
   </section>
@@ -153,10 +198,10 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a class="footer__active">Security Of Funds</a></li>
+          <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a href="stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="kids.html">KIDs</a></li>
+          <li><a class="footer__active">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
@@ -168,12 +213,12 @@
           <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="../trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="../resources/glossary.html">Glossary</a></li>
+          <li><a>Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
