--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -53,7 +53,7 @@
                 <li><b>About</b></li>
                 <li><a href="#">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
-                <li><a href="about-us/stp-broker.html">STP Broker</a></li>
+                <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
                 <li><a>KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
@@ -80,7 +80,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
-                <li><a href="#">Glossary</a></li>
+                <li><a href="../resources/glossary.html">Glossary</a></li>
                 <li><a href="#">Tools</a></li>
               </ul>
             </div>
@@ -170,7 +170,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="#">Glossary</a></li>
+          <li><a href="../resources/glossary.html">Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
