--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -80,7 +80,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
-                <li><a href="#">Glossary</a></li>
+                <li><a href="../resources/glossary.html">Glossary</a></li>
                 <li><a href="#">Tools</a></li>
               </ul>
             </div>
@@ -260,7 +260,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="#">Glossary</a></li>
+          <li><a href="../resources/glossary.html">Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
