new faq page + content

--- a/forexglobal/about-us/careers.html
+++ b/forexglobal/about-us/careers.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,19 +103,19 @@
       </nav>
     </div>
   </header>
-  <section class="careers">
+  <section class="inner">
     <div class="container">
-      <h1 class="careers__name">Careers</h1>
-      <div class="careers__img"></div>
-      <div class="careers__text">
+      <h1 class="inner__name">Careers</h1>
+      <div class="inner__icon  inner__icon--careers"></div>
+      <div class="inner__text">
         <p>We offer a challenging and rewarding working environment, where every employee counts and can make a difference.</p>
         <p>We believe in the value of our people and their input, the benefits of teamwork and the sense of belonging to our organisation.</p>
         <p>We are passionate about developing our people and provide long-term career paths.</p>
         <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p>
         <p>We abide by the European Labour Law and the requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
-        <div class="careers__links">
-          <a class="careers__download" href="../img/pdf/Customer-Support-French-Italian-German-Portuguese-Spanish-Swedish.pdf" target="_blank">Customer Support (French, Italian, German, Portuguese, Spanish, Swedish)</a>
-          <a class="careers__download" href="../img/pdf/Social-Media-Manager-Job-Description.pdf" target="_blank">Social Media Manager</a>
+        <div class="inner__links  inner__links--careers">
+          <a class="inner__download" href="../img/pdf/Customer-Support-French-Italian-German-Portuguese-Spanish-Swedish.pdf" target="_blank">Customer Support (French, Italian, German, Portuguese, Spanish, Swedish)</a>
+          <a class="inner__download" href="../img/pdf/Social-Media-Manager-Job-Description.pdf" target="_blank">Social Media Manager</a>
         </div>
       </div>
     </div>
