--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,11 +103,11 @@
       </nav>
     </div>
   </header>
-  <section class="kids">
+  <section class="inner">
     <div class="container">
-      <h1 class="kids__name">KIDs</h1>
-      <div class="kids__img"></div>
-      <div class="kids__text">
+      <h1 class="inner__name">KIDs</h1>
+      <div class="inner__icon  inner__icon--kids"></div>
+      <div class="inner__text">
         <p>In order to help you better understand our products and services and the nature, risks, costs, potential gains and losses associated with them – we developed Key Information Documents (KIDs). These are categorised below into four major asset classes and include CFDs on Currency pairs, Indices, Commodities, Equities or other OTC derivative products.</p>
         <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
         <b>Key Information Documents</b>
