--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,11 +103,11 @@
       </nav>
     </div>
   </header>
-  <section class="security">
+  <section class="inner">
     <div class="container">
-      <h1 class="security__name">Security of Funds</h1>
-      <div class="security__img"></div>
-      <div class="security__text">
+      <h1 class="inner__name">Security of Funds</h1>
+      <div class="inner__icon  inner__icon--security"></div>
+      <div class="inner__text">
         <b>Regulation</b>
         <p>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/">300/16</a>. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
         <b>Segregation of Funds</b>
