--- a/forexglobal/contact-us.html
+++ b/forexglobal/contact-us.html
@@ -92,7 +92,7 @@
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
                 <li><a>Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
