--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -90,8 +90,8 @@
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Contact Us</b></li>
-                  <li><a href="contact-us/contact-us.html">Contact Us</a></li>
-                  <li><a href="#">FAQ</a></li>
+                  <li><a href="contact-us.html">Contact Us</a></li>
+                  <li><a href="faq.html">FAQ</a></li>
                 </ul>
               </div>
             </li>
