--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,9 +103,9 @@
       </nav>
     </div>
   </header>
-  <section class="glossary">
+  <section class="inner">
     <div class="container">
-      <h1 class="glossary__name">Glossary</h1>
+      <h1 class="inner__name">Glossary</h1>
       <ul class="glossary__button">
         <li><button>A</button></li>
         <li><button>B</button></li>
@@ -134,7 +134,7 @@
         <li><button>Y</button></li>
         <li><button>Z</button></li>
       </ul>
-      <div class="glossary__content">
+      <div class="inner__content">
         <details open>
           <summary>AAA</summary>
           <p>AAA is the top rating given for bonds, denoting the highest quality. This rating is awarded by the major rating agencies.</p>
