--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,11 +103,11 @@
       </nav>
     </div>
   </header>
-  <section class="account-types">
+  <section class="inner">
     <div class="container">
-      <h1 class="account-types__name">Account types</h1>
-      <p class="account-types__text">We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
-      <div class="account-types__flex">
+      <h1 class="inner__name">Account types</h1>
+      <p class="inner__text">We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
+      <div class="inner__flex  inner__flex--types">
         <div class="account-types__box  account-types__box--mini">
           <h2>Mini</h2>
           <p>Basic Trading For Beginners</p>
