--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../../contact-us.html">Contact Us</a></li>
+                <li><a href="../../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,57 +103,57 @@
       </nav>
     </div>
   </header>
-  <section class="webtrader">
+  <section class="inner">
     <div class="container">
-      <h1 class="webtrader__name">Webtrader platform</h1>
-      <p class="webtrader__text">Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.</p>
-      <p class="webtrader__text">Our webtrader has been built with one purpose in mind and that’s to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform’s capabilities when you’re not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
-      <div class="webtrader__img">
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
+      <h1 class="inner__name">Webtrader platform</h1>
+      <p class="inner__text">Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.</p>
+      <p class="inner__text">Our webtrader has been built with one purpose in mind and that’s to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform’s capabilities when you’re not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
+      <div class="inner__img">
+        <div class="inner__flex">
+          <div class="inner__box  inner__box--right">
             <b>1</b>
             <p>You can filter instruments using keyword or securities group or set your own asset classes.</p>
           </div>
-          <div class="webtrader__box  webtrader__box--left">
+          <div class="inner__box  inner__box--left">
             <b>4</b>
             <p>Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.</p>
           </div>
         </div>
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
+        <div class="inner__flex">
+          <div class="inner__box  inner__box--right">
             <b>2</b>
             <p>By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.</p>
           </div>
-          <div class="webtrader__box  webtrader__box--left">
+          <div class="inner__box  inner__box--left">
             <b>5</b>
             <p>Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.</p>
           </div>
         </div>
-        <div class="webtrader__flex">
-          <div class="webtrader__box  webtrader__box--right">
+        <div class="inner__flex">
+          <div class="inner__box  inner__box--right">
             <b>3</b>
             <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
           </div>
-          <div class="webtrader__box  webtrader__box--left">
+          <div class="inner__box  inner__box--left">
             <b>6</b>
             <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
           </div>
         </div>
-        <div class="webtrader__flex  webtrader__flex--down">
-          <div class="webtrader__box  webtrader__box--up">
+        <div class="inner__flex  inner__flex--down">
+          <div class="inner__box  inner__box--up">
             <b>3</b>
             <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
           </div>
-          <div class="webtrader__box  webtrader__box--up">
+          <div class="inner__box  inner__box--up">
             <b>6</b>
             <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
           </div>
         </div>
       </div>
       <hr>
-      <div class="webtrader__flex  webtrader__flex--list">
-        <div class="webtrader__mockup"></div>
-        <div class="webtrader__list">
+      <div class="inner__flex  inner__flex--list">
+        <div class="inner__mockup"></div>
+        <div class="inner__list">
           <b>Key features included:</b>
           <ul>
             <li>Works with any browser</li>
@@ -170,15 +170,15 @@
         </div>
       </div>
       <hr>
-      <div class="webtrader__try">
+      <div class="inner__try">
         <div class="container">
           <h2>Try It Now</h2>
-          <div class="webtrader__links">
-            <a class="webtrader__real" href="#">
+          <div class="inner__links">
+            <a class="inner__real" href="#">
               Real account<br>
               <span>start live trading</span>
             </a>
-            <a class="webtrader__demo" href="#">
+            <a class="inner__demo" href="#">
               Demo account<br>
               <span>start praccticing for free</span>
             </a>
