--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,11 +103,11 @@
       </nav>
     </div>
   </header>
-  <section class="stp">
+  <section class="inner">
     <div class="container">
-      <h1 class="stp__name">STP Broker</h1>
-      <div class="stp__img"></div>
-      <div class="stp__text">
+      <h1 class="inner__name">STP Broker</h1>
+      <div class="inner__icon  inner__icon--stp"></div>
+      <div class="inner__text">
         <p>STP: stands for Straight Trough Processing</p>
         <p>STP is a unique alternative which optimizes the speed of transactions by avoiding any interventions of a dealing desk, including no requotes.</p>
         <p>Orders are automatically passed through to the company’s liquidity providers, which then allows the trade orders to be processed in an efficient and timely manner that will meet the highest level of clients’ satisfaction.</p>
