--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,10 +103,10 @@
       </nav>
     </div>
   </header>
-  <section class="account-comparison">
+  <section class="inner">
     <div class="container">
-      <h1 class="account-comparison__name">Account comparison</h1>
-      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="inner__name">Account comparison</h1>
+      <p class="inner__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
     </div>
   </section>
   <section class="payment  payment--inner">
