--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -91,8 +91,8 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
-                <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -103,9 +103,9 @@
       </nav>
     </div>
   </header>
-  <section class="announcements">
+  <section class="inner">
     <div class="container">
-      <h1 class="announcements__name">Announcements</h1>
+      <h1 class="inner__name">Announcements</h1>
       <ul class="announcements__list">
         <li><b>April 2018</b></li>
         <li><a href="../img/pdf/Market-Holidays-in-April-2018.pdf" target="_blank">Market Holidays in April 2018</a></li>
