--- a/forexglobal/faq.html
+++ b/forexglobal/faq.html
@@ -460,6 +460,85 @@
           <summary>Do I need to pay tax?</summary>
           <p>Forex24 does not deduct or pay any tax on our clients’ behalf. It is the client’s own responsibility to take care of his or her own tax obligations.</p>
         </details>
+        <h2>Trading</h2>
+        <details>
+          <summary>What is a CFD?</summary>
+          <p>CFD stands for 'Contract For Differences’</p>
+          <p>“Contract for Differences” or “CFD” shall mean a contract, which is a contract for differences by reference to variations in the price of an Underlying Asset. A CFD is a Financial Instrument. Use of the term CFD in this Agreement, unless otherwise stated, must be read to include the Forex Instruments (which may be used on our Website and our marketing material).</p>
+        </details>
+        <details>
+          <summary>How does the trailing stop work?</summary>
+          <p>The trailing stop works by your stop loss being activated once the price moves in your favour by the predefined trailing stop level, 50 points (5 pips) being the minimum. It then trails the price at a distance of the predefined level, as it continues to move in the positive direction. Note that your trailing stop operates from your client terminal and not on the server, therefore make sure to stay logged in to your account whilst you have a trailing stop set.</p>
+        </details>
+        <details>
+          <summary>Do you charge any commissions?</summary>
+          <p>There may be commission charged, depending on your account type. Please see the Account type specifications via the following link: <a href="trading/account-types.html" target="_blank">Account Types</a></p>
+        </details>
+        <details>
+          <summary>Why can’t I trade some CFD’s at certain times?</summary>
+          <p>Each night there is a small break in trading on the non-Forex CFD’s. You can see the trading hours from the following link: <a href="trading/trading-specification.html" target="_blank">Trading Specification</a></p>
+        </details>
+        <details>
+          <summary>What is equity?</summary>
+          <p>Equity is your balance + floating profit/loss of your open positions.</p>
+        </details>
+        <details>
+          <summary>I keep getting trade context busy message when I try to place a trade, what is this?</summary>
+          <p>The “Trade context is busy” message occurs when you try to process an order just after you processed another order and before giving it sufficient time to completely process.</p>
+          <p>To resolve this, please restart the platform.</p>
+        </details>
+        <details>
+          <summary>What is free margin?</summary>
+          <p>The free margin is the equity – margin. These are the free funds that can be used to open trades with.</p>
+        </details>
+        <details>
+          <summary>What is margin?</summary>
+          <p>Margin is the amount required to maintain your open positions.</p>
+        </details>
+        <details>
+          <summary>What is the minimum and maximum lot size that I can open a trade with?</summary>
+          <p>The minimum lot is 0.01 and maximum lot is 500.</p>
+        </details>
+        <details>
+          <summary>How do I calculate my margin?</summary>
+          <p>Margin is calculated as follows: (Volume x Market Price) / Leverage.</p>
+        </details>
+        <details>
+          <summary>What is your margin call/stop level?</summary>
+          <p>Margin call is at 75% and stop out level is 50%.</p>
+        </details>
+        <details>
+          <summary>How do I calculate my margin level?</summary>
+          <p>Margin level is calculated as follows: Equity / Used Margin x 100</p>
+        </details>
+        <details>
+          <summary>What does pip stand for?</summary>
+          <p>Pip stands for percentage in point. A pip is equal to 1/100th of 1 percent. If you buy the EUR/USD pair at 1.25000 and close it at 1.25010 you have gained 1 pip.</p>
+        </details>
+        <details>
+          <summary>How do I calculate the pip value?</summary>
+          <p>You can calculate the value of a pip by the following formula: the pip in decimal terms (0.0001) x the lot, as trade size (1 lot = 100,000). E.g. EUR/USD is 0.0001 x 100,000 = 10usd for 1 lot.</p>
+        </details>
+        <details>
+          <summary>What is a pipette?</summary>
+          <p>A pipette is 1/10th of a pip. On our 5-digit Forex pairs and 3-digits on the JPY pairs, the last digit is a pipette. This allows for more accurate pricing and allows traders to take advantage of the smallest moves.</p>
+        </details>
+        <details>
+          <summary>Can my account experience slippage?</summary>
+          <p>Slippage means that an order is filled at a different price than the initial quoted price. This can occur at times of high volatility when the price is moving rapidly, such as high news events. Slippage can be positive as well as negative for the client.</p>
+        </details>
+        <details>
+          <summary>What is spread?</summary>
+          <p>Spread is the difference between the bid and ask price.</p>
+        </details>
+        <details>
+          <summary>What is your spread?</summary>
+          <p>We have very competitive spreads beginning from 0.4 pip. You can see full details from here: <a href="trading/trading-specification.html" target="_blank">Trading Specification</a></p>
+        </details>
+        <details>
+          <summary>How is the swap calculated?</summary>
+          <p>Swap rate calculation: Lot x swap rate x no. of nights. The swap rate is charged by 3 on Wednesday night in order to compensate for the two weekend days, Saturday and Sunday, where no swap is charged.</p>
+        </details>
       </div>
     </div>
   </section>
