--- a/forexglobal/trading/platforms/desktop.html
+++ b/forexglobal/trading/platforms/desktop.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>WebTrader - Forex24 Global</title>
+  <title>Desktop - Forex24 Global</title>
   <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
@@ -105,67 +105,23 @@
   </header>
   <section class="inner">
     <div class="container">
-      <h1 class="inner__name">Webtrader platform</h1>
-      <p class="inner__text">Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.</p>
-      <p class="inner__text">Our webtrader has been built with one purpose in mind and that’s to improve the trading experience of our clients. Combine MT4 and our Webtrader under one trading account so you can keep all the powerful features that our MT4 infrastructure offers, but increase your platform’s capabilities when you’re not at your own trading desk or on the go. Our Webtrader uses all the advantage of the brand new infrastructure for MT4 and gives you flexibility and choice.</p>
-      <div class="inner__img">
-        <div class="inner__flex">
-          <div class="inner__box  inner__box--right">
-            <b>1</b>
-            <p>You can filter instruments using keyword or securities group or set your own asset classes.</p>
-          </div>
-          <div class="inner__box  inner__box--left">
-            <b>4</b>
-            <p>Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.</p>
-          </div>
-        </div>
-        <div class="inner__flex">
-          <div class="inner__box  inner__box--right">
-            <b>2</b>
-            <p>By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.</p>
-          </div>
-          <div class="inner__box  inner__box--left">
-            <b>5</b>
-            <p>Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.</p>
-          </div>
-        </div>
-        <div class="inner__flex">
-          <div class="inner__box  inner__box--right">
-            <b>3</b>
-            <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
-          </div>
-          <div class="inner__box  inner__box--left">
-            <b>6</b>
-            <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
-          </div>
-        </div>
-        <div class="inner__flex  inner__flex--down">
-          <div class="inner__box  inner__box--up">
-            <b>3</b>
-            <p>You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”</p>
-          </div>
-          <div class="inner__box  inner__box--up">
-            <b>6</b>
-            <p>ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.</p>
-          </div>
-        </div>
-      </div>
-      <hr>
+      <h1 class="inner__name">Desktop</h1>
+      <p class="inner__text">MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
       <div class="inner__flex  inner__flex--list">
-        <div class="inner__mockup  inner__mockup--webtrader"></div>
+        <div class="inner__mockup  inner__mockup--desktop"></div>
         <div class="inner__list">
-          <b>Key features included:</b>
+          <b>Benefits:</b>
           <ul>
-            <li>Works with any browser</li>
-            <li>No downloads, Flash  or Java required</li>
-            <li>You will keep your MT4 login and password</li>
-            <li>Trade directly from the chart</li>
-            <li>Multi-language support</li>
-            <li>View aggregated positions</li>
-            <li>Advanced "Close All" functionality</li>
-            <li>Real-time quotes and execution</li>
-            <li>Fully synchronized with MT4</li>
-            <li>Dynamic order routing</li>
+            <li>Ease of use through its user friendly interface</li>
+            <li>Multiple charting and analysis</li>
+            <li>Multilingual platform</li>
+            <li>Real time client account summary</li>
+            <li>It requires NO download.<br>Simply login and trade from your browser</li>
+            <li>One-Click Trading allows you to place trades<br>in a mouse click</li>
+            <li>Get real-time quotes in MarketWatch</li>
+            <li>9 chart time frames</li>
+            <li>Trading from charts & monitor active orders on the chart</li>
+            <li>Advanced analysis tools</li>
           </ul>
         </div>
       </div>
