--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -70,7 +70,7 @@
                 <li><a href="../trading/product-specification.html">Product Specification</a></li>
                 <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
-                <li><a href="#">Funding and Withdrawal</a></li>
+                <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="../trading/announcements.html">Announcements</a></li>
               </ul>
             </div>
@@ -162,7 +162,7 @@
           <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
-          <li><a href="#">Funding and Withdrawal</a></li>
+          <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="../trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
