--- a/forexglobal/contact-us.html
+++ b/forexglobal/contact-us.html
@@ -65,13 +65,13 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Trading</b></li>
-                <li><a href="../trading/account-types.html">Account Types</a></li>
-                <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-                <li><a href="../trading/product-specification.html">Product Specification</a></li>
-                <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
+                <li><a href="trading/account-types.html">Account Types</a></li>
+                <li><a href="trading/account-comparison.html">Account Comparison</a></li>
+                <li><a href="trading/product-specification.html">Product Specification</a></li>
+                <li><a href="trading/trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
-                <li><a href="#">Funding and Withdrawal</a></li>
-                <li><a href="../trading/announcements.html">Announcements</a></li>
+                <li><a href="trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+                <li><a href="trading/announcements.html">Announcements</a></li>
               </ul>
             </div>
           </li>
@@ -80,7 +80,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
-                <li><a href="../resources/glossary.html">Glossary</a></li>
+                <li><a href="resources/glossary.html">Glossary</a></li>
                 <li><a href="#">Tools</a></li>
               </ul>
             </div>
@@ -165,27 +165,27 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+          <li><a href="about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="about-us/stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="about-us/kids.html">KIDs</a></li>
+          <li><a href="about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="../trading/account-types.html">Account Types</a></li>
-          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
-          <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
+          <li><a href="trading/account-types.html">Account Types</a></li>
+          <li><a href="trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="trading/product-specification.html">Product Spesification</a></li>
+          <li><a href="trading/trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
-          <li><a href="#">Funding and Withdrawal</a></li>
-          <li><a href="../trading/announcements.html">Announcements</a></li>
+          <li><a href="trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+          <li><a href="trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="#">Glossary</a></li>
+          <li><a href="resources/glossary.html">Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
