--- a/forexglobal/trading/funding-and-withdrawal.html
+++ b/forexglobal/trading/funding-and-withdrawal.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Security of Funds - Forex24 Global</title>
+  <title>Funding and Withdrawal - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -52,11 +52,11 @@
               <ul class="nav__sub">
                 <li><b>About</b></li>
                 <li><a href="#">Licenses and Regulations</a></li>
-                <li><a>Security of Funds</a></li>
-                <li><a href="stp-broker.html">STP Broker</a></li>
+                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
+                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
                 <li><a href="#">Legal Documents</a></li>
-                <li><a href="kids.html">KIDs</a></li>
-                <li><a href="careers.html">Careers</a></li>
+                <li><a href="../about-us/kids.html">KIDs</a></li>
+                <li><a href="../about-us/careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -65,13 +65,13 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Trading</b></li>
-                <li><a href="../trading/account-types.html">Account Types</a></li>
-                <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-                <li><a href="../trading/product-specification.html">Product Specification</a></li>
-                <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
+                <li><a href="account-types.html">Account Types</a></li>
+                <li><a href="account-comparison.html">Account Comparison</a></li>
+                <li><a href="product-specification.html">Product Specification</a></li>
+                <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
-                <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a href="../trading/announcements.html">Announcements</a></li>
+                <li><a>Funding and Withdrawal</a></li>
+                <li><a href="announcements.html">Announcements</a></li>
               </ul>
             </div>
           </li>
@@ -105,20 +105,194 @@
   </header>
   <section class="inner">
     <div class="container">
-      <h1 class="inner__name">Security of Funds</h1>
-      <div class="inner__icon  inner__icon--security"></div>
-      <div class="inner__text">
-        <b>Regulation</b>
-        <p>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/">300/16</a>. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
-        <b>Segregation of Funds</b>
-        <p>As a regulatory requirement, client funds are kept in separate clients’ accounts in top tier EU banks, to be used only for client trading and are totally separate from the company’s own funds. The company only works with regulated payment service providers.</p>
-        <b>Negative Balance Protection</b>
-        <p>Forex24 Global offers Negative Balance Protection to all of its clients, which is a guarantee a client cannot lose more money than they invested with the company.</p>
-        <b>Investor Compensation Fund</b>
-        <p>Forex24 Global is a member of the Investor Compensation Fund, which provides covered clients the extra security of receiving compensation from the fund for any claims against the company not fulfilling its obligations. For further details please <a href="../img/pdf/Investor-Compensation-Fund.pdf" target="_blank">see our ICF document</a>.</p>
-        <b>Funding and Website Security</b>
-        <p>We use level 1 PCI DSS compliant payment providers that use the highest level of online security when funding your account. We also adopt the SSL (Secure Sockets Layer) network security protocol that keeps your personal online communication and data with us private and secure.</p>
-      </div>
+      <h1 class="inner__name">Funding and Withdrawal</h1>
+      <table class="table">
+        <tbody>
+        <tr class="table__title">
+          <th>Payment Method</th>
+          <th>Deposit Fee</th>
+          <th>Deposit Time</th>
+          <th>Withdrawal Fee</th>
+          <th>Widthdrawal Processing Time</th>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--visa"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>1 EUR*</td>
+          <td>1 Working Day**</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--mc"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>1 EUR*</td>
+          <td>1 Working Day**</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--bank"></td>
+          <td>Covered by Us!</td>
+          <td>2-5 working days</td>
+          <td>Dependent on amount<br>&amp; banks involved</td>
+          <td>1 Working Day**<br><a href="../img/pdf/Bank-Details-of-Lydya-Financial-Ltd.pdf" target="_blank">Deposit Bank Accounts</a></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--paypal"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--neteller"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--skrill"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--ecopayz"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--intercash"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--fast"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--paysafe"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--safety"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--trust"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--cash"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--ideal"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--trustly"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--neosurf"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--ekonto"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--ticket"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--giro"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--sofort"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--przelewy"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--qiwi"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>2%</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--yandex"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>6% + 0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--wm"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>2.8%</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr class="table__row">
+          <td class="table__logo  table__logo--moneta"></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>4.9%</td>
+          <td>1 Working Day</td>
+        </tr>
+        </tbody>
+      </table>
+      <p class="inner__text">*An additional €5 fee will apply for amounts above the initial deposited amount.<br>**It can take an additional 2-5 working days for the banks to process the amount into your account.</p>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -153,22 +327,22 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a class="footer__active">Security Of Funds</a></li>
-          <li><a href="stp-broker.html">STP Broker</a></li>
+          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../about-us/stp-broker">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="kids.html">KIDs</a></li>
-          <li><a href="careers.html">Careers</a></li>
+          <li><a href="../about-us/kids.html">KIDs</a></li>
+          <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="../trading/account-types.html">Account Types</a></li>
-          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
-          <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
+          <li><a href="account-types.html">Account Types</a></li>
+          <li><a href="account-comparison.html">Account Comparison</a></li>
+          <li><a href="product-specification.html">Product Spesification</a></li>
+          <li><a href="trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
-          <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a class="footer__active">Funding and Withdrawal</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
