--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -70,7 +70,7 @@
                 <li><a href="../product-specification.html">Product Specification</a></li>
                 <li><a href="../trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
-                <li><a href="#">Funding and Withdrawal</a></li>
+                <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="../announcements.html">Announcements</a></li>
               </ul>
             </div>
@@ -233,8 +233,8 @@
           <li><a href="../product-specification.html">Product Spesification</a></li>
           <li><a href="../trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
-          <li><a href="#">Funding and Withdrawal</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+          <li><a href="../announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
