--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -239,7 +239,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="../resources/glossary.html">Glossary</a></li>
+          <li><a href="../../resources/glossary.html">Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
