--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -168,7 +168,7 @@
           <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="../trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
