--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -198,11 +198,11 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="stp-broker.html">STP Broker</a></li>
+          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a class="footer__active">KIDs</a></li>
-          <li><a href="careers.html">Careers</a></li>
+          <li><a href="../about-us/kids.html">KIDs</a></li>
+          <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
@@ -218,7 +218,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a>Glossary</a></li>
+          <li><a class="footer__active">Glossary</a></li>
           <li><a href="#">Tools</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
