--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -66,7 +66,7 @@
               <ul class="nav__sub">
                 <li><b>Trading</b></li>
                 <li><a href="account-types.html">Account Types</a></li>
-                <li><a href="account-comparison.html">Account Comparison</a></li>
+                <li><a>Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
