--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -71,7 +71,7 @@
                 <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
                 <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a href="announcements.html">Announcements</a></li>
+                <li><a>Announcements</a></li>
               </ul>
             </div>
           </li>
